...
          onChangeText={setContactEmail}
          isValid={true}
          label="Contact Email"
        />
        <View style={[styles.buttonContainer, { width: '50%', marginTop: 40 }]}>
          <TouchableOpacity style={styles.nextButton} onPress={handleNext}>
            <Text style={styles.buttonText}>finish registration</Text>
          </TouchableOpacity>
        </View>
      </ScrollView>
    </SafeAreaView>
  );
};
...
