...
          style={[
            styles.option,
            selectedOption === 'private' ? styles.selectedPrivateOption : styles.privateOption,
          ]}
          onPress={() => setSelectedOption('private')}
        >
          <Text style={styles.optionText}>I am a private person</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={[
            styles.option,
            selectedOption === 'business' ? styles.selectedBusinessOption : styles.businessOption,
          ]}
...
