appId: com.idonagler.ShareBuy 
--- #test if users can create user accounts
- launchApp
- tapOn:
    point: "75%,82%"
- tapOn: "I am a private person"
- tapOn: "next, "
- tapOn:
    point: "48%,55%"
- inputText: "Gaby Yeselson"
- tapOn:
    point: "48%,60%"
- inputText: "gaby@example.com"
- "hideKeyboard"
- tapOn:
    point: "48%,77%"
- inputText: "0500000000"
- "hideKeyboard"
- tapOn: "next, "
- tapOn:
    point: "48%,45%"
- inputText: "A123123a!"
- tapOn:
    point: "48%,44%"
- inputText: "A123123a!"
- "hideKeyboard"
- tapOn: "next, "
- tapOn:
    point: "48%,35%"
- inputText: "Israel"
- tapOn:
    point: "48%,42%"
- inputText: "Beersheba"
- tapOn:
    point: "48%,52%"
- inputText: "Ben Gurion blvd"
- tapOn:
    point: "48%,63%"
- inputText: "1"
- "hideKeyboard"
- tapOn:
    point: "49%,78%"
- inputText: "12345"
- "hideKeyboard"
- tapOn: "finish registration"
- assertVisible:
    id: "toastContentContainer"
